fixed footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .navigation {
-  margin: 5px 0px 25px 25px;
+  margin: 5px 0px 25px 0px;
 }
 
 .logo-text {
@@ -29,7 +29,7 @@
 
 .footer {
   margin-top: 40px;
-  margin-bottom: 0px;
+  padding-bottom: 25px !important;
 }
 
 .trip-details {
